# library-system

./: .gitignore  CLAUDE.md  Readme.md  Run.md  check_profile_photo.py  compiler.xml  deploy.ps1  deploy.sh  diagram.puml  docker-compose.infra.yml  docker-compose.services.yml  encodings.xml  idgenerator.py  pom.xml  projstructure.txt  selenium_login_test.py  test_admin.py  test_booking_notification.py  test_idcard.py  test_photo_debug.py  test_photo_upload.py  test_registration_login.py  workspace.xml
android/: .gitignore  gradle.properties  settings.gradle.kts
backend/: CLAUDE.md
frontend/: .env.example  CLAUDE.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
go-backend/: go.work  go.work.sum  migrate.sql  run.sh
k8s/: configmap.yaml  kafka.yaml  library-system.yaml  namespace.yaml  (+3 more)
rust-backend/: .env.example  CLAUDE.md  Cargo.toml
rust-backend/migrations/: 001_initial.sql  002_add_missing_columns.sql  003_add_broadcast_messages.sql  004_plan_price_whole_rupees.sql
rust-backend/src/: app_state.rs  config.rs  error.rs  main.rs  response.rs  routes.rs
rust-backend/src/handlers/: admin.rs  auth.rs  gallery.rs  membership.rs  mod.rs  payment.rs  seat.rs  user.rs  visitor.rs
rust-backend/src/middleware/: auth.rs  mod.rs
rust-backend/src/models/: admin.rs  membership.rs  mod.rs  seat.rs  user.rs
rust-backend/src/services/: admin.rs  auth.rs  idcard.rs  jwt.rs  membership.rs  mod.rs  notification.rs  otp.rs  seat.rs  user.rs
rust-backend/src/services/payment/: cashfree.rs  mod.rs  razorpay.rs
(+251 files in other folders)
